--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<p>portfolio</p>
 				</header>
 				<footer>
-					<a href="#banner" class="button style3 scrolly scrolly-centered">a collection of works</a>
+					<a href="#banner" class="button style3 scrolly scrolly-centered">code//aesthetic//glitches</a>
 				</footer>
 			</section>
 		
