--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 					<p>portfolio</p>
 				</header>
 				<footer>
-					<a href="#banner" class="button style3 scrolly scrolly-centered">code//aesthetic//glitches</a>
+					<a href="#banner" class="button style3 scrolly scrolly-centered">code &nsim; aesthetic &nsim; glitches</a>
 				</footer>
 			</section>
 		
 		<!-- Banner -->
-			<section id="banner">
+			<!-- <section id="banner">
 				<header>
 					<h2>This is Overflow</h2>
 				</header>
@@ -46,7 +46,7 @@
 				<footer>
 					<a href="#first" class="button style2 scrolly">Act on this message</a>
 				</footer>
-			</section>
+			</section> -->
 		
 		<!-- Feature 1 -->
 			<article id="first" class="container box style1 right">
