--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 -->
 <html>
 	<head>
-		<title>Overflow by HTML5 UP</title>
+		<title>erchsm.me — A Collection</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+		<link rel="icon" type="image/ico" 
+      href="favicon.ico">		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.scrolly.min.js"></script>
 		<script src="js/jquery.poptrox.min.js"></script>
@@ -38,13 +39,13 @@
 		<!-- Banner -->
 			<section id="banner">
 				<header>
-					<h2>This is Overflow</h2>
+					<h2>Hi, My name is Eric!</h2>
 				</header>
 				<p>A brand new site template designed by <a href="http://n33.co">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>.<br />
 				It’s fully responsive, built on <strong>skel</strong>, and of course entirely free<br />
 				under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
 				<footer>
-					<a href="#first" class="button style2 scrolly">Act on this message</a>
+					<a href="#first" class="button style3 scrolly scrolly-centered">Act on this message</a>
 				</footer>
 			</section>
 		
