--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>erchsm.me — A Collection</title>
+		<title>erchsm.me ≁ A Collection</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -39,7 +39,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<header>
-					<h2>Hi, My name is Eric!</h2>
+					<h2>Hi, I'm Eric!</h2>
 				</header>
 				<p>A brand new site template designed by <a href="http://n33.co">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>.<br />
 				It’s fully responsive, built on <strong>skel</strong>, and of course entirely free<br />
