--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
 				<header>
 					<h2>Hi, I'm Eric!</h2>
 				</header>
-				<p>A brand new site template designed by <a href="http://n33.co">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>.<br />
+				<p>I'm a UI/UX Engineer in located in the SF Bay Area.<a href="http://n33.co">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>.<br />
 				It’s fully responsive, built on <strong>skel</strong>, and of course entirely free<br />
 				under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
 				<footer>
-					<a href="#first" class="button style3 scrolly scrolly-centered">Act on this message</a>
+					<a href="#prefolio" class="button style3 scrolly scrolly-centered">Act on this message</a>
 				</footer>
 			</section>
 		
 		<!-- Feature 1 -->
-			<article id="first" class="container box style1 right">
+			<!-- <article id="first" class="container box style1 right">
 				<a href="#" class="image fit"><img src="images/me.jpg" alt="" /></a>
 				<div class="inner">
 					<header>
@@ -59,7 +59,7 @@
 					</header>
 					<p>Tortor faucibus ullamcorper nec tempus purus sed penatibus. Lacinia pellentesque eleifend vitae est elit tristique velit tempus etiam.</p>
 				</div>
-			</article>
+			</article> -->
 		
 		<!-- Feature 2 -->
 			<!-- <article class="container box style3 left">
@@ -74,7 +74,7 @@
 			</article> -->
 		
 		<!-- Portfolio -->
-			<article class="container box style2">
+			<article id="prefolio" class="container box style2">
 				<header>
 					<h2>Magnis parturient</h2>
 					<p>Justo phasellus et aenean dignissim<br />
