--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 			<section id="header">
 				<header>
 					<h1>erchsm</h1>
-					<p>portfolio</p>
+					<p>UI/UX Design</p>
 				</header>
 				<footer>
-					<a href="#banner" class="button style3 scrolly scrolly-centered">code&nsim;aesthetic&nsim;glitches</a>
+					<a href="#banner" class="button style3 scrolly scrolly-centered"> About Me</a>
 				</footer>
 			</section>
 		
@@ -41,11 +41,11 @@
 				<header>
 					<h2>Hi, I'm Eric!</h2>
 				</header>
-				<p>I'm a UI/UX Engineer in located in the SF Bay Area.<a href="http://n33.co">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>.<br />
+				<p>I'm a UI/UX Engineer in located in the SF Bay Area. <br>I've prepared this site to showcase my work- for code samples check out my <a href="http://github.com/ecsmith">Github</a>  <br />
 				It’s fully responsive, built on <strong>skel</strong>, and of course entirely free<br />
 				under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
 				<footer>
-					<a href="#prefolio" class="button style3 scrolly scrolly-centered">Act on this message</a>
+					<a href="#prefolio" class="button style2 scrolly scrolly-centered">Continue to Portfolio</a>
 				</footer>
 			</section>
 		
