added more fonts

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 -->
 <html>
 	<head>
-		<title>erchsm.me ≁ A Collection</title>
+		<title>ERCHSM.ME ≁ UI/UX DESIGN</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<link rel="icon" type="image/ico" 
+		<link rel="icon" type="image/ico"
       href="favicon.ico">		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.scrolly.min.js"></script>
@@ -35,7 +35,7 @@
 					<a href="#banner" class="button style3 scrolly scrolly-centered"> About Me</a>
 				</footer>
 			</section>
-		
+
 		<!-- Banner -->
 			<section id="banner">
 				<header>
@@ -48,7 +48,7 @@
 					<a href="#prefolio" class="button style2 scrolly scrolly-centered">Continue to Portfolio</a>
 				</footer>
 			</section>
-		
+
 		<!-- Feature 1 -->
 			<!-- <article id="first" class="container box style1 right">
 				<a href="#" class="image fit"><img src="images/me.jpg" alt="" /></a>
@@ -60,7 +60,7 @@
 					<p>Tortor faucibus ullamcorper nec tempus purus sed penatibus. Lacinia pellentesque eleifend vitae est elit tristique velit tempus etiam.</p>
 				</div>
 			</article> -->
-		
+
 		<!-- Feature 2 -->
 			<!-- <article class="container box style3 left">
 				<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
@@ -72,7 +72,7 @@
 					<p>Rhoncus mattis egestas sed fusce sodales rutrum et etiam ullamcorper. Etiam egestas scelerisque ac duis magna lorem ipsum dolor.</p>
 				</div>
 			</article> -->
-		
+
 		<!-- Portfolio -->
 			<article id="prefolio" class="container box style2">
 				<header>
@@ -95,7 +95,7 @@
 					</div>
 				</div>
 			</article>
-		
+
 		<!-- Contact -->
 			<article class="container box style3">
 				<header>
@@ -121,7 +121,7 @@
 					</div>
 				</form>
 			</article>
-		
+
 		<!-- Generic -->
 		<!--
 			<article class="container box style3">
@@ -134,9 +134,9 @@
 						<h3>Paragraph</h3>
 						<p>This is a subtitle</p>
 					</header>
-					<p>Phasellus nisl nisl, varius id <sup>porttitor sed pellentesque</sup> ac orci. Pellentesque 
-					habitant <strong>strong</strong> tristique <b>bold</b> et netus <i>italic</i> malesuada <em>emphasized</em> ac turpis egestas. Morbi 
-					leo suscipit ut. Praesent <sub>id turpis vitae</sub> turpis pretium ultricies. Vestibulum sit 
+					<p>Phasellus nisl nisl, varius id <sup>porttitor sed pellentesque</sup> ac orci. Pellentesque
+					habitant <strong>strong</strong> tristique <b>bold</b> et netus <i>italic</i> malesuada <em>emphasized</em> ac turpis egestas. Morbi
+					leo suscipit ut. Praesent <sub>id turpis vitae</sub> turpis pretium ultricies. Vestibulum sit
 					amet risus elit.</p>
 				</section>
 				<section>
@@ -150,16 +150,16 @@
 					<header>
 						<h3>Divider</h3>
 					</header>
-					<p>Donec consectetur <a href="#">vestibulum dolor et pulvinar</a>. Etiam vel felis enim, at viverra 
-					ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci 
-					facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam 
-					tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices 
+					<p>Donec consectetur <a href="#">vestibulum dolor et pulvinar</a>. Etiam vel felis enim, at viverra
+					ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
+					facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
+					tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
 					posuere cubilia.</p>
 					<hr />
-					<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra 
-					ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci 
-					facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam 
-					tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices 
+					<p>Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
+					ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
+					facilisis leo magna. Cras sit amet urna eros, id egestas urna. Quisque aliquam
+					tempus euismod. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
 					posuere cubilia.</p>
 				</section>
 				<section>
@@ -278,7 +278,7 @@
 				</section>
 			</article>
 		-->
-		
+
 		<section id="footer">
 			<ul class="icons">
 				<li><a href="http://instagram.com/smitten___" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
