--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>ERCHSM.ME ≁ UI/UX DESIGN</title>
+		<title>ERCHSM.ME</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -32,16 +32,16 @@
 					<p>UI/UX</p>
 				</header>
 				<footer>
-					<a href="#banner" class="button style3 scrolly scrolly-centered"> About Me</a>
+					<a href="#banner" class="button style3 scrolly scrolly-centered">About Me</a>
 				</footer>
 			</section>
 
 		<!-- Banner -->
 			<section id="banner">
 				<header>
-					<h2>Hi, I'm Eric!</h2>
+					<h2>Hi, My name is Eric!</h2>
 				</header>
-				<p>I'm a UI/UX Designer and Engineer in located in the SF Bay Area. <br>I've prepared this site to showcase my work- for code samples check out my <a href="http://github.com/ecsmith">Github</a>  <br />
+				<p>I'm a UI/UX Designer and Engineer located in the SF Bay Area. <br>I've prepared this site to showcase my work- for code samples check out my <a href="http://github.com/ecsmith">Github</a>  <br />
 				It’s fully responsive, built on <strong>skel</strong>, and of course entirely free<br />
 				under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
 				<footer>
