--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		<!-- Portfolio -->
 			<article id="prefolio" class="container box style2">
 				<header>
-					<h2>Magnis parturient</h2>
+					<h2>My Portfolio</h2>
 					<p>Justo phasellus et aenean dignissim<br />
 					placerat cubilia purus lectus.</p>
 				</header>
