--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<section id="header">
 				<header>
 					<h1>erchsm</h1>
-					<p>UI/UX</p>
+					<p>UXD/UXE</p>
 				</header>
 				<footer>
 					<a href="#banner" class="button style3 scrolly scrolly-centered">About Me</a>
@@ -41,7 +41,7 @@
 				<header>
 					<h2>Hi, My name is Eric!</h2>
 				</header>
-				<p>I'm a UI/UX Designer and Engineer located in the SF Bay Area. <br>I've prepared this site to showcase my work- for code samples check out my <a href="http://github.com/ecsmith">Github</a>  <br />
+				<p>I'm a UX Designer and Engineer located in the SF Bay Area. <br>I've prepared this site to showcase my work- for code samples check out my <a href="http://github.com/ecsmith">Github</a>  <br />
 				It’s fully responsive, built on <strong>skel</strong>, and of course entirely free<br />
 				under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
 				<footer>
