removed first button

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<p>UXD/UXE</p>
 				</header>
 				<footer>
-					<a href="#banner" class="button style3 scrolly scrolly-centered">About Me</a>
+					<!-- <a href="#banner" class="button style3 scrolly scrolly-centered">About Me</a> -->
 				</footer>
 			</section>
 
