--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 				<header>
 					<h2>Hi, My name is Eric!</h2>
 				</header>
-				<p>I'm a UX Designer and Engineer located in the SF Bay Area. <br>I've prepared this site to showcase my work- for code samples check out my <a href="http://github.com/ecsmith">Github</a>  <br />
-				It’s fully responsive, built on <strong>skel</strong>, and of course entirely free<br />
+				<p>I'm a UX Designer and Engineer located in the SF Bay Area. <br>I've prepared this site to showcase my work- for code samples check out my <a href="http://github.com/ecsmith">Github</a>.<br />
+				This site is fully responsive, built with <a href="https://github.com/n33/skel">Skel</a>, and of course entirely open for extension<br />
 				under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
 				<footer>
 					<a href="#prefolio" class="button style2 scrolly scrolly-centered">Continue to Portfolio</a>
