--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<h1> erchsm</h1>
-					<p>UXD/UXE</p>
+					<h1>ERCHSM</h1>
+					<p>UXD|UXE</p>
 				</header>
 				<footer>
 					<!-- <a href="#banner" class="button style3 scrolly scrolly-centered">About Me</a> -->
