--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<section id="header">
 				<header>
 					<h1>ERCHSM</h1>
-					<p>UXD|UXE</p>
+					<p>UX Designer</p>
 				</header>
 				<footer>
 					<!-- <a href="#banner" class="button style3 scrolly scrolly-centered">About Me</a> -->
