--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<section id="header">
 				<header>
 					<h1>ERCHSM</h1>
-					<p>UX Designer</p>
+					<p><a href="http://www.quora.com/Whats-the-difference-between-UI-UX-Designer-and-UI-UX-Engineer">UXE</a>/<a href="http://www.quora.com/Whats-the-difference-between-UI-UX-Designer-and-UI-UX-Engineer">UXD</a></p>
 				</header>
 				<footer>
 					<!-- <a href="#banner" class="button style3 scrolly scrolly-centered">About Me</a> -->
