--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			</article> -->
 
 		<!-- Portfolio -->
-			<section id="prefolio" class="container box style2">
+			<article id="prefolio" class="container box style2">
 				<header>
 					<h2>My Portfolio</h2>
 					<p>Justo phasellus et aenean dignissim<br />
