--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 			<article id="prefolio" class="container box style2">
 				<header>
 					<h2>My Portfolio</h2>
-					<p>Justo phasellus et aenean dignissim<br />
-					placerat cubilia purus lectus.</p>
+					<p>Here are some samples of my work.<br />
+					Check external links to check out<br/> some code samples.</p>
 				</header>
 				<div class="inner gallery">
 					<div class="row 0%">
@@ -99,8 +99,8 @@
 		<!-- Contact -->
 			<article class="container box style3">
 				<header>
-					<h2>Nisl sed ultricies</h2>
-					<p>Diam dignissim lectus eu ornare volutpat orci.</p>
+					<h2>Like what you see?</h2>
+					<p>Send me a message–I'd love to hear from you</p>
 				</header>
 				<form method="post" action="#">
 					<div class="row 50%">
