--- a/index.html
+++ b/index.html
@@ -5,49 +5,49 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>ERCHSM.ME</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<link rel="icon" type="image/ico"
-      href="favicon.ico">		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery.scrolly.min.js"></script>
-		<script src="js/jquery.poptrox.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-		</noscript>
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-	</head>
-	<body>
+<head>
+	<title>ERCHSM.ME</title>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta name="description" content="" />
+	<meta name="keywords" content="" />
+	<link rel="icon" type="image/ico"
+	href="favicon.ico">		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+	<script src="js/jquery.min.js"></script>
+	<script src="js/jquery.scrolly.min.js"></script>
+	<script src="js/jquery.poptrox.min.js"></script>
+	<script src="js/skel.min.js"></script>
+	<script src="js/init.js"></script>
+	<noscript>
+		<link rel="stylesheet" href="css/skel.css" />
+		<link rel="stylesheet" href="css/style.css" />
+	</noscript>
+	<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+</head>
+<body>
 
-		<!-- Header -->
-			<section id="header">
-				<header>
-					<h1>ERCHSM</h1>
-					<p><a href="http://www.quora.com/Whats-the-difference-between-UI-UX-Designer-and-UI-UX-Engineer">UXE</a>/<a href="http://www.quora.com/Whats-the-difference-between-UI-UX-Designer-and-UI-UX-Engineer">UXD</a></p>
-				</header>
-				<footer>
-					<!-- <a href="#banner" class="button style3 scrolly scrolly-centered">About Me</a> -->
-				</footer>
-			</section>
+	<!-- Header -->
+	<section id="header">
+		<header>
+			<h1>ERCHSM</h1>
+			<p><a href="http://www.quora.com/Whats-the-difference-between-UI-UX-Designer-and-UI-UX-Engineer">UXE</a>/<a href="http://www.quora.com/Whats-the-difference-between-UI-UX-Designer-and-UI-UX-Engineer">UXD</a></p>
+		</header>
+		<footer>
+			<!-- <a href="#banner" class="button style3 scrolly scrolly-centered">About Me</a> -->
+		</footer>
+	</section>
 
-		<!-- Banner -->
-			<section id="banner">
-				<header>
-					<h2>Hi, My name is Eric!</h2>
-				</header>
-				<p>I'm a UX Designer and Engineer located in the SF Bay Area. <br>I've prepared this site to showcase my work- for code samples check out my <a href="http://github.com/ecsmith">Github</a>.<br />
-				This site is fully responsive, built with <a href="https://github.com/n33/skel">Skel</a>, and of course entirely open for extension<br />
-				under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
-				<footer>
-					<a href="#prefolio" class="button style2 scrolly scrolly-centered">Continue to Portfolio</a>
-				</footer>
-			</section>
+	<!-- Banner -->
+	<section id="banner">
+		<header>
+			<h2>Hi, My name is Eric!</h2>
+		</header>
+		<p>I'm a UX Designer and Engineer located in the SF Bay Area. <br>I've prepared this site to showcase my work- for code samples check out my <a href="http://github.com/ecsmith">Github</a>.<br />
+			This site is fully responsive, built with <a href="https://github.com/n33/skel">Skel</a>, and of course entirely open for extension<br />
+			under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
+			<footer>
+				<a href="#prefolio" class="button style2 scrolly scrolly-centered">Continue to Portfolio</a>
+			</footer>
+		</section>
 
 		<!-- Feature 1 -->
 			<!-- <article id="first" class="container box style1 right">
@@ -61,7 +61,7 @@
 				</div>
 			</article> -->
 
-		<!-- Feature 2 -->
+			<!-- Feature 2 -->
 			<!-- <article class="container box style3 left">
 				<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 				<div class="inner">
@@ -73,56 +73,56 @@
 				</div>
 			</article> -->
 
-		<!-- Portfolio -->
+			<!-- Portfolio -->
 			<article id="prefolio" class="container box style2">
 				<header>
 					<h2>My Portfolio</h2>
 					<p>Here are some samples of my work.<br />
-					Check external links to check out<br/> some code samples.</p>
-				</header>
-				<div class="inner gallery">
-					<div class="row 0%">
-						<div class="3u"><a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" alt="" title="Ad infinitum" /></a></div>
-						<div class="3u"><a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" alt="" title="Dressed in Clarity" /></a></div>
-						<div class="3u"><a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" alt="" title="Raven" /></a></div>
-						<div class="3u"><a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" alt="" title="I'll have a cup of Disneyland, please" /></a></div>
-					</div>
-					<div class="row 0%">
-						<div class="3u"><a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" alt="" title="Cherish" /></a></div>
-						<div class="3u"><a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" alt="" title="Different." /></a></div>
-						<div class="3u"><a href="images/fulls/07.jpg" class="image fit"><img src="images/thumbs/07.jpg" alt="" title="History was made here" /></a></div>
-						<div class="3u"><a href="images/fulls/08.jpg" class="image fit"><img src="images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a></div>
-					</div>
-				</div>
-			</article>
-
-		<!-- Contact -->
-			<article class="container box style3">
-				<header>
-					<h2>Like what you see?</h2>
-					<p>Send me a message–I'd love to hear from you</p>
-				</header>
-				<form method="post" action="#">
-					<div class="row 50%">
-						<div class="6u"><input type="text" class="text" name="name" placeholder="Name" /></div>
-						<div class="6u"><input type="text" class="text" name="email" placeholder="Email" /></div>
-					</div>
-					<div class="row 50%">
-						<div class="12u">
-							<textarea name="message" placeholder="Message"></textarea>
+						Check external links to check out<br/> some code samples.</p>
+					</header>
+					<div class="inner gallery">
+						<div class="row 0%">
+							<div class="3u"><a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" alt="" title="Ad infinitum" /></a></div>
+							<div class="3u"><a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" alt="" title="Dressed in Clarity" /></a></div>
+							<div class="3u"><a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" alt="" title="Raven" /></a></div>
+							<div class="3u"><a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" alt="" title="I'll have a cup of Disneyland, please" /></a></div>
+						</div>
+						<div class="row 0%">
+							<div class="3u"><a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" alt="" title="Cherish" /></a></div>
+							<div class="3u"><a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" alt="" title="Different." /></a></div>
+							<div class="3u"><a href="images/fulls/07.jpg" class="image fit"><img src="images/thumbs/07.jpg" alt="" title="History was made here" /></a></div>
+							<div class="3u"><a href="images/fulls/08.jpg" class="image fit"><img src="images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a></div>
 						</div>
 					</div>
-					<div class="row">
-						<div class="12u">
-							<ul class="actions">
-								<li><input type="submit" value="Send Message" /></li>
-							</ul>
-						</div>
-					</div>
-				</form>
-			</article>
+				</article>
 
-		<!-- Generic -->
+				<!-- Contact -->
+				<article class="container box style3">
+					<header>
+						<h2>Like what you see?</h2>
+						<p>Send me a message–I'd love to hear from you!</p>
+					</header>
+					<form method="post" action="#">
+						<div class="row 50%">
+							<div class="6u"><input type="text" class="text" name="name" placeholder="Name" /></div>
+							<div class="6u"><input type="text" class="text" name="email" placeholder="Email" /></div>
+						</div>
+						<div class="row 50%">
+							<div class="12u">
+								<textarea name="message" placeholder="Message"></textarea>
+							</div>
+						</div>
+						<div class="row">
+							<div class="12u">
+								<ul class="actions">
+									<li><input type="submit" value="Send Message" /></li>
+								</ul>
+							</div>
+						</div>
+					</form>
+				</article>
+
+				<!-- Generic -->
 		<!--
 			<article class="container box style3">
 				<header>
@@ -295,4 +295,14 @@
 		</section>
 
 	</body>
-</html>
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-61122568-1', 'auto');
+		ga('send', 'pageview');
+
+	</script>
+	</html>
