--- a/givjoy.html
+++ b/givjoy.html
@@ -50,28 +50,34 @@
 -->					</header>
 <section class="wrapper style5">
 	<div class="inner">
-	<h2>When was the last time you made someones day?&horbar;</h2>
-	<p></p>
+	<h2>When was the last time you made someone's day?</h2> 
+	<h2>Wouldn't it be great if there was a plaform to bring <strong>joy</strong> to your loved ones? &horbar;</h2>
+	<blockquote>Sarah Park, a buisiness develoment posed this prompt in her initial pitch for the idea of GivJoy at the beginning of ProtoHack. This question really resonated with me and I decided to join their team and help them to solve their problem.</blockquote>
 		<div class="row">
 			<div class="6u 12u$(medium)">
 					<h4>The Beginning</h4>
 					<p>Going into ProtoHack I had no idea what to expect. As an ex-developer, the idea of <strong>"no coding"</strong> during a hackthon was something frightening to me. In my prior hackathons the day usually ending up in team frustration and no working code to show for it.
 					</p>
-					&horbar;To say the least I was anxious about what the day would bring. The turnout of ProtoHack consisted of They gave us the morning of ProtoHack to team up and many enthusiastic individuals with took the stage to  </p>
+					&horbar;To say the least I was anxious about what the day would bring. The turnout of ProtoHack mostly consisted of buisiness development professionals, UX designers and marketers. They gave us the morning of ProtoHack to build teams and comes up with ideas for a product. Many enthusiastic individuals also took to the stage to pitch their ideas to find talent to help them.</p>
 			</div>
 			<div class="6u$ 12u$(medium)">
 				<h4>About ProtoHack</h4>
 				<p>ProtoHack exists to show non-coders that they can create something amazing from nothing. It empowers and enables the non-technical community with the tools, knowledge and connections that will help bring their idea to life and visually communicate it through prototyping.
 
-					Using prototyping tools, drag and drop editors, mockups, wireframes and anything else you think of to visually demo your idea on stage. Competitors will work in teams (up to 4) or solo. You have 9 hours to prototype your idea and then you’ll present on stage. For a full list of rules and how it runs. visually demo your idea on stage.</p>
-				</div>
-				
+				Using prototyping tools, drag and drop editors, mockups, wireframes and anything else you think of to visually demo your idea on stage. Competitors will work in teams (up to 5) or solo. You have 9 hours to prototype your idea and then you’ll present on stage.</p>
 			</div>
+			I feel as a junior designer I brought these talented buisiness peeps and high level ideas to  them in on a focused design. making sure deliverables are met.proud
+			Dicovery & Reasearch -> Persona
+			Sketching Iterations of Sketching
+			UserFlow
+			</div>
+			biz goals was to create something to give jpy. create joy emotion but not sure of how. allow people to recieve it and to give it. software store, communicator.  
 			<h2>My Role in our Team</h2>
-			<p>ProtoHack exists to show non-coders that they can create something amazing from nothing. We empower and enable the non-technical community with the tools, knowledge and connections that will help bring their idea to life and visually communicate it through prototyping.</p>
-
-			<h5>Our First Stab at a Problem Statement</h5>
-			<blockquote>Our Users have trouble finding a unique ways to spread  joy to friends & family. Its also time consuming to find unique gifts.</blockquote>
+			<p>Our ProtoHack team consisted of 5 individuals–3 Buisiness Development people and 1 other UX Designer besides myself. Besides 2 of the Biz Development none of us had met each other before. </p>
+			<h2>Our Initial Steps</h2>
+			<p>ProtoHack has Begun! Our initial step in the process was algning on the problem and identifying our problem. We tried an activity to align our team on the problem we were trying to solve </p>
+			<h4>Our Initial Problem Statement</h5>
+			<blockquote>Our Users have trouble finding a unique ways to spread joy to friends & family. Its time consuming to find unique gifts for them.</blockquote>
 			<!-- <p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec dui cursus, posuere dui eget interdum. Fusce lectus magna, sagittis at facilisis vitae, pellentesque at etiam. Quisque posuere leo quis sem commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p> -->
 
 			<!-- <hr /> -->
