--- a/givjoy.html
+++ b/givjoy.html
@@ -1,15 +1,13 @@
 <!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 <head>
-	<title>Generic - Spectral by HTML5 UP</title>
+	<title>Eric Smith's Portfolio</title>
+	<meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/img/me3.jpg" />
+	<meta prefix="og: http://ogp.me/ns#" />
+	<meta property="image" content="https://raw.githubusercontent.com/ecsmith/me/gh-pages/img/me3.jpg"/>
+	<meta name="description" content="I'm a UI/UX Designer & Engineer located in the SF Bay Area. I've prepared this site to showcase my work. For code samples check out my Github.">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description" content="" />
 	<meta name="keywords" content="" />
 	<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 	<link rel="stylesheet" href="css/style.css" />
@@ -52,6 +50,8 @@
 	<div class="inner">
 	<h2>When was the last time you made someone's day?</h2> 
 	<h2>Wouldn't it be great if there was a plaform to bring <strong>joy</strong> to your loved ones? &horbar;</h2>
+	<h4>GivJoy</h4>
+	<p>Givjoy is a mobile application for allowing a person to bring joy to one of their friend. GivJoy does this by creating a marketplace for people with creative talents to be employed to bring joy to other people. </p>
 	<blockquote>Sarah Park, a buisiness develoment posed this prompt in her initial pitch for the idea of GivJoy at the beginning of ProtoHack. This question really resonated with me and I decided to join their team and help them to solve their problem.</blockquote>
 		<div class="row">
 			<div class="6u 12u$(medium)">
