--- a/givjoy.html
+++ b/givjoy.html
@@ -48,39 +48,47 @@
 -->					</header>
 <section class="wrapper style5">
 	<div class="inner">
-	<h2>When was the last time you made someone's day?</h2> 
-	<h2>Wouldn't it be great if there was a plaform to bring <strong>joy</strong> to your loved ones? &horbar;</h2>
-	<h4>GivJoy</h4>
-	<p>Givjoy is a mobile application for allowing a person to bring joy to one of their friend. GivJoy does this by creating a marketplace for people with creative talents to be employed to bring joy to other people. </p>
-	<blockquote>Sarah Park, a buisiness develoment posed this prompt in her initial pitch for the idea of GivJoy at the beginning of ProtoHack. This question really resonated with me and I decided to join their team and help them to solve their problem.</blockquote>
+		<h2>When was the last time you made someone's day?</h2> 
+		<h2>Wouldn't it be great if there was a platform to bring <strong>joy</strong> to your loved ones? &horbar;</h2>
 		<div class="row">
-			<div class="6u 12u$(medium)">
-					<h4>The Beginning</h4>
-					<p>Going into ProtoHack I had no idea what to expect. As an ex-developer, the idea of <strong>"no coding"</strong> during a hackthon was something frightening to me. In my prior hackathons the day usually ending up in team frustration and no working code to show for it.
-					</p>
-					&horbar;To say the least I was anxious about what the day would bring. The turnout of ProtoHack mostly consisted of buisiness development professionals, UX designers and marketers. They gave us the morning of ProtoHack to build teams and comes up with ideas for a product. Many enthusiastic individuals also took to the stage to pitch their ideas to find talent to help them.</p>
+			<div class="6u 12u$(medium)"><h4>GivJoy</h4>
+				<p>Givjoy is a mobile application for allowing a person to bring joy to one of their friends. GivJoy does this by creating a marketplace for where-in a joy-sender can employ a person with a joy-giving creative talents to bring joy to their friend. GivJoy was created at ProtoHack, a code-free hackathon, in 7 hours.</p>
 			</div>
 			<div class="6u$ 12u$(medium)">
-				<h4>About ProtoHack</h4>
-				<p>ProtoHack exists to show non-coders that they can create something amazing from nothing. It empowers and enables the non-technical community with the tools, knowledge and connections that will help bring their idea to life and visually communicate it through prototyping.
-
-				Using prototyping tools, drag and drop editors, mockups, wireframes and anything else you think of to visually demo your idea on stage. Competitors will work in teams (up to 5) or solo. You have 9 hours to prototype your idea and then you’ll present on stage.</p>
+				<blockquote>FYI Sarah Park, a buisiness develoment posed this prompt in her initial pitch for the idea of GivJoy at the beginning of ProtoHack. This question really resonated with me and I decided to join their team and help them to solve their problem.</blockquote>
 			</div>
-			I feel as a junior designer I brought these talented buisiness peeps and high level ideas to  them in on a focused design. making sure deliverables are met.proud
-			Dicovery & Reasearch -> Persona
-			Sketching Iterations of Sketching
-			UserFlow
-			</div>
-			biz goals was to create something to give jpy. create joy emotion but not sure of how. allow people to recieve it and to give it. software store, communicator.  
-			<h2>My Role in our Team</h2>
-			<p>Our ProtoHack team consisted of 5 individuals–3 Buisiness Development people and 1 other UX Designer besides myself. Besides 2 of the Biz Development none of us had met each other before. </p>
-			<h2>Our Initial Steps</h2>
-			<p>ProtoHack has Begun! Our initial step in the process was algning on the problem and identifying our problem. We tried an activity to align our team on the problem we were trying to solve </p>
-			<h4>Our Initial Problem Statement</h5>
-			<blockquote>Our Users have trouble finding a unique ways to spread joy to friends & family. Its time consuming to find unique gifts for them.</blockquote>
-			<!-- <p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec dui cursus, posuere dui eget interdum. Fusce lectus magna, sagittis at facilisis vitae, pellentesque at etiam. Quisque posuere leo quis sem commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p> -->
+			<div class="row">
+				<div class="6u 12u$(medium)">
+					<h4>The Beginning</h4>
+					<p>Going into ProtoHack I had no idea what to expect. As an web developer, the idea of a strictly <strong>"no coding"</strong> hackthon seemed backwards to me. If there has been something I've learned about the design world is that designers get super passionate about their designs–I was fearful of how 
+					</p>
+					&horbar;To say the least I was anxious about what the day would bring. The turnout of ProtoHack mostly consisted of buisiness development professionals, UX designers and marketers. They gave us the morning of ProtoHack to build teams and comes up with ideas for a product. Many enthusiastic individuals also took to the stage to pitch their ideas to find talent to help them.</p>
+				</div>
+				<div class="6u$ 12u$(medium)">
+					<h4>About ProtoHack</h4>
+					<p>ProtoHack exists to show non-coders that they can create something amazing from nothing. It empowers and enables the non-technical community with the tools, knowledge and connections that will help bring their idea to life and visually communicate it through prototyping.
 
-			<!-- <hr /> -->
+						Using prototyping tools, drag and drop editors, mockups, wireframes and anything else you think of to visually demo your idea on stage. Competitors will work in teams (up to 5) or solo. You have 9 hours to prototype your idea and then you’ll present on stage.</p>
+					</div>
+					making sure deliverables are met.proud
+					Dicovery & Reasearch -> Persona
+					Sketching Iterations of Sketching
+					UserFlow
+				</div>
+				biz goals was to create something to give jpy. create joy emotion but not sure of how. allow people to recieve it and to give it. software store, communicator.  
+				<h2>My Role in our Team</h2>
+				<p>Our ProtoHack team consisted of 5 individuals–3 Buisiness Development people and 1 other UX Designer besides myself. Besides 2 of the Biz Development none of us had met each other before. </p>
+				<h2>Our Initial Steps</h2>
+				<p>ProtoHack has Begun! Our initial step in the process was algning on the problem and identifying our problem. We tried an activity to align our team on the problem we were trying to solve </p>
+				<h4>Our Initial Problem Statement</h5>
+					<blockquote>Our Users have trouble finding a unique ways to spread joy to friends & family. Its time consuming to find unique gifts for them.</blockquote>
+					<h4>Next Steps</h4>
+					<p>
+						As a junior designer I feel as though I did a good job of sythesizing the high level ideas of our talented buisiness people and forcing them to focus down to a specific user flow and design.
+					</p>
+					<!-- <p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec dui cursus, posuere dui eget interdum. Fusce lectus magna, sagittis at facilisis vitae, pellentesque at etiam. Quisque posuere leo quis sem commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p> -->
+
+					<!-- <hr /> -->
 
 								<!-- <h4>Feugiat aliquam</h4>
 								<p>Nam sapien ante, varius in pulvinar vitae, rhoncus id massa. Donec varius ex in mauris ornare, eget euismod urna egestas. Etiam lacinia tempor ipsum, sodales porttitor justo. Aliquam dolor quam, semper in tortor eu, volutpat efficitur quam. Fusce nec fermentum nisl. Aenean erat diam, tempus aliquet erat.</p>
@@ -106,14 +114,12 @@
 					<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="https://instagram.com/smitten___/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://github.com/ecsmith" class="icon fa-github"><span class="label">Github</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Eric Smith</li><li>Design: <a href="http://html5up.net">Inspired from HTML5UP</a></li>
 						</ul>
 					</footer>
 
