--- a/index.html
+++ b/index.html
@@ -77,16 +77,20 @@
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="https://raw.githubusercontent.com/ecsmith/M-E/master/screenshots/iphonegold.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>M&E</h2>
+								<p>Meet and Eat(M&E) is an app designed to allow users to organize meet-ups with friends to get a bite to eat.</p>
+								<ul class="actions">
+								<li><a href="#" class="button">Learn More</a></li>
+							</ul>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="https://raw.githubusercontent.com/ecsmith/box-app/gh-pages/screenshots/flat_browser.png" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Box Secure Sharing Application</h2>
+								<p></p>
+								<ul class="actions">
+								<li><a href="#" class="button">Learn More</a></li>
+							</ul>
 							</div>
 						</section>
 					</section>
