--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 									<a href="#" class="menuToggle"><span></span></a>
 									<div id="menu">
 										<ul>
+											<li><a href="index.html">Home</a></li>
 											<li><a href="givjoy.html">1. ProtoHack GivJoy</a></li>
-											<li><a href="#">My Resume</a></li>
+											<li><a href="http://ecsmith.github.io/me/resume/resume-ericsmith-March2015.pdf">My Resume</a></li>
 											<li><a href="#">Contact</a></li>
 										</ul>
 									</div>
@@ -53,7 +54,9 @@
 					<section id="one" class="wrapper style5 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Hi, My name is Eric!</h2><p>I'm a UI/UX Designer & Engineer located in the SF Bay Area. <br/>I've prepared this site to showcase my work. Below are some case studies I've worked on. </br>For code samples check out my <a href="http://github.com/ecsmith">github</a>.
+								<h2>Hi, My name is Eric!</h2>
+								<p>I'm a UX Designer & Engineer located in the SF Bay Area. <br/>I've prepared this site to showcase my work. I'm also a photographer and love a good nature walk. Below are some case studies I've worked on. </br>For code samples check out my <a href="http://github.com/ecsmith">github</a>.
+								</p>
 							</header>
 							<!-- <ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
@@ -64,7 +67,7 @@
 					</section>
 
 				<!-- Two -->
-					<section id="two" class="wrapper alt style2">
+					<section id="two" class="wrapper alt style5">
 						<section class="spotlight">
 							<div class="image"><img src="images/GivJoy/Logo-01.png" alt="" /></div><div class="content">
 								<h2>Case Study:<br />
@@ -140,7 +143,7 @@
 								<p></p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="#" class="button fit special">My Resume</a></li>
+								<li><a href="http://ecsmith.github.io/me/resume/resume-ericsmith-March2015.pdf" class="button fit special">My Resume</a></li>
 								<li><a href="#" class="button fit">Email Me</a></li>
 							</ul>
 						</div>
@@ -154,7 +157,7 @@
 							<li><a href="https://github.com/ecsmith" class="icon fa-github"><span class="label">Github</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Eric Smith</li><li>Design: <a href="http://html5up.net">Inspired from HTML5UP</a></li>
+							<li>&copy; Eric Smith</li><li>Design: Inspired from templates on HTML5UP</li>
 						</ul>
 					</footer>
 
