--- a/givjoy.html
+++ b/givjoy.html
@@ -29,10 +29,9 @@
 						<div id="menu">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Sign Up</a></li>
-								<li><a href="#">Log In</a></li>
+								<li><a href="givjoy.html">1. ProtoHack GivJoy</a></li>
+								<li><a href="http://ecsmith.github.io/me/resume/resume-ericsmith-March2015.pdf">My Resume</a></li>
+								<li><a href="#">Contact</a></li>
 							</ul>
 						</div>
 					</li>
@@ -55,7 +54,8 @@
 				<p>Givjoy is a mobile application for allowing a person to bring joy to one of their friends. GivJoy does this by creating a marketplace for where-in a joy-sender can employ a person with a joy-giving creative talents to bring joy to their friend. GivJoy was created at ProtoHack, a code-free hackathon, in 7 hours.</p>
 			</div>
 			<div class="6u$ 12u$(medium)">
-				<blockquote>FYI Sarah Park, a buisiness develoment posed this prompt in her initial pitch for the idea of GivJoy at the beginning of ProtoHack. This question really resonated with me and I decided to join their team and help them to solve their problem.</blockquote>
+				<blockquote>FYI Sarah Park, a marketing specialist posed the above prompt in her initial pitch for the idea of GivJoy at the beginning of ProtoHack. This question really resonated with me and I decided to join their team and help them to solve their problem.</blockquote>
+			</div>
 			</div>
 			<div class="row">
 				<div class="6u 12u$(medium)">
@@ -68,23 +68,42 @@
 					<h4>About ProtoHack</h4>
 					<p>ProtoHack exists to show non-coders that they can create something amazing from nothing. It empowers and enables the non-technical community with the tools, knowledge and connections that will help bring their idea to life and visually communicate it through prototyping.
 
-						Using prototyping tools, drag and drop editors, mockups, wireframes and anything else you think of to visually demo your idea on stage. Competitors will work in teams (up to 5) or solo. You have 9 hours to prototype your idea and then you’ll present on stage.</p>
-					</div>
-					making sure deliverables are met.proud
-					Dicovery & Reasearch -> Persona
-					Sketching Iterations of Sketching
-					UserFlow
+						Using prototyping tools, drag and drop editors, mockups, wireframes and anything else you think of to visually demo your idea on stage. Competitors will work in teams (up to 5) or solo. You have 9 hours to prototype your idea and then you present on stage.</p>
+					</div>			
 				</div>
-				biz goals was to create something to give jpy. create joy emotion but not sure of how. allow people to recieve it and to give it. software store, communicator.  
+			  
 				<h2>My Role in our Team</h2>
 				<p>Our ProtoHack team consisted of 5 individuals–3 Buisiness Development people and 1 other UX Designer besides myself. Besides 2 of the Biz Development none of us had met each other before. </p>
+
+				<!-- <span class="image left"><img src="images/GivJoy/GivJoy4.jpg" alt="" /></span> -->
 				<h2>Our Initial Steps</h2>
-				<p>ProtoHack has Begun! Our initial step in the process was algning on the problem and identifying our problem. We tried an activity to align our team on the problem we were trying to solve </p>
-				<h4>Our Initial Problem Statement</h5>
-					<blockquote>Our Users have trouble finding a unique ways to spread joy to friends & family. Its time consuming to find unique gifts for them.</blockquote>
+				<p>ProtoHack has Begun! Our initial step in the process was algning on the problem and identifying our problem. I proposed we try an activity to align our team on the problem we were trying to solve </p>
+					<blockquote><span class="big">Our Users have trouble finding a unique way to spread joy to friends & family. Its time consuming to find unique gifts for them.</span></blockquote>
+						<div class="box alt">
+										<div class="row uniform 50%">
+					<div class="12u"><span class="image fit"><img src="images/GivJoy/user-groups.png" alt="" /></span></div>
+			<!-- 		<div class="4u"><span class="image fit"><img src="images/GivJoy/sender.png" alt="" /></span></div>
+					<div class="4u"><span class="image fit"><img src="images/GivJoy/sender.png" alt="" /></span></div>
+					<div class="4u"><span class="image fit"><img src="images/GivJoy/sender.png" alt="" /></span></div> -->
+					</div>
+					</div>
+					<h2>Research</h2>
+				<ol>
+					<li>Tell us about the last time you gave a gift to someone that wasn't a special occasion. What was their reaction?</li>
+					<li>How did you know what to get that person? Where did you get it from?</li>
+					<li>What was the most memorable gifts you have ever recieved not for an occasion? Why was it so special?</li>
+				</ol>
 					<h4>Next Steps</h4>
 					<p>
 						As a junior designer I feel as though I did a good job of sythesizing the high level ideas of our talented buisiness people and forcing them to focus down to a specific user flow and design.
+					</p>
+					<h4>Random Thoughts</h4>
+					<p>
+						Amaking sure deliverables are met.proud
+					Dicovery & Reasearch -> Persona
+					Sketching Iterations of Sketching
+					UserFlow
+						biz goals was to create something to give jpy. create joy emotion but not sure of how. allow people to recieve it and to give it. software store, communicator.
 					</p>
 					<!-- <p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec dui cursus, posuere dui eget interdum. Fusce lectus magna, sagittis at facilisis vitae, pellentesque at etiam. Quisque posuere leo quis sem commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p> -->
 
@@ -114,12 +133,12 @@
 					<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.facebook.com/erchsm" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="https://instagram.com/smitten___/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://github.com/ecsmith" class="icon fa-github"><span class="label">Github</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Eric Smith</li><li>Design: <a href="http://html5up.net">Inspired from HTML5UP</a></li>
+							<li>&copy; Eric Smith</li><li>Design: Inspired from HTML5UP</li>
 						</ul>
 					</footer>
 
