--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<div class="inner">
 							<header class="major">
 								<h2>Hi, My name is Eric!</h2>
-								<p>I'm a UX Designer & Engineer located in the SF Bay Area. <br/>I've prepared this site to showcase my work. I'm also a photographer and love a good nature walk. Below are some case studies I've worked on. </br>For code samples check out my <a href="http://github.com/ecsmith">github</a>.
+								<p>I'm a UX Designer & Engineer located in the SF Bay Area. I've prepared this site to showcase my work. I'm also a photographer and love a good nature walk. Below are some case studies I've worked on. For code samples check out my <a href="http://github.com/ecsmith">github</a>.
 								</p>
 							</header>
 							<!-- <ul class="icons major">
@@ -157,7 +157,7 @@
 							<li><a href="https://github.com/ecsmith" class="icon fa-github"><span class="label">Github</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Eric Smith</li><li>Design: Inspired from templates on HTML5UP</li>
+							<li>&copy; Eric Smith</li><li>Design: Inspired from HTML5UP</li>
 						</ul>
 					</footer>
 
