--- a/givjoy.html
+++ b/givjoy.html
@@ -47,57 +47,63 @@
 -->					</header>
 <section class="wrapper style5">
 	<div class="inner">
-		<h2>When was the last time you made someone's day?</h2> 
-		<h2>Wouldn't it be great if there was a platform to bring <strong>joy</strong> to your loved ones? &horbar;</h2>
+		<blockquote><span class="big">When was the last time you made someone's day?</span></blockquote> 
+		<blockquote><span class="big">Wouldn't it be great if there was a platform to <strong>give joy</strong> to your loved ones?</span></blockquote> 
 		<div class="row">
 			<div class="6u 12u$(medium)"><h4>GivJoy</h4>
 				<p>Givjoy is a mobile application for allowing a person to bring joy to one of their friends. GivJoy does this by creating a marketplace for where-in a joy-sender can employ a person with a joy-giving creative talents to bring joy to their friend. GivJoy was created at ProtoHack, a code-free hackathon, in 7 hours.</p>
 			</div>
 			<div class="6u$ 12u$(medium)">
-				<blockquote>FYI Sarah Park, a marketing specialist posed the above prompt in her initial pitch for the idea of GivJoy at the beginning of ProtoHack. This question really resonated with me and I decided to join their team and help them to solve their problem.</blockquote>
+				<blockquote>FYI Sarah Park, a marketing specialist posed the above prompt in her initial pitch for the idea of GivJoy at the beginning of ProtoHack. This question really resonated with me and I decided to join their team and help them solve their problem.</blockquote>
 			</div>
 			</div>
 			<div class="row">
-				<div class="6u 12u$(medium)">
+				<div class="8u 12u$(medium)">
 					<h4>The Beginning</h4>
-					<p>Going into ProtoHack I had no idea what to expect. As an web developer, the idea of a strictly <strong>"no coding"</strong> hackthon seemed backwards to me. If there has been something I've learned about the design world is that designers get super passionate about their designs–I was fearful of how 
+					<p>Going into ProtoHack I had no idea what to expect. As a web developer, the idea of a strictly <strong>"no coding"</strong> hackthon seemed backwards to me. If there's been something I've learned about the design world it's that designers get passionate about their designs–I was fearful of how this would come into play in this space.
 					</p>
-					&horbar;To say the least I was anxious about what the day would bring. The turnout of ProtoHack mostly consisted of buisiness development professionals, UX designers and marketers. They gave us the morning of ProtoHack to build teams and comes up with ideas for a product. Many enthusiastic individuals also took to the stage to pitch their ideas to find talent to help them.</p>
+					&horbar;To say the least I was <strong>anxious</strong> about what the day would bring. The turnout of ProtoHack mostly consisted of buisiness development professionals, UX designers and marketers. They gave us the morning of ProtoHack to build teams and comes up with ideas for a product. Many passionate individuals even took to the stage to pitch their ideas hoping to find the talent needed to act on them.</p>
 				</div>
-				<div class="6u$ 12u$(medium)">
+				<div class="4u$ 12u$(medium)">
 					<h4>About ProtoHack</h4>
 					<p>ProtoHack exists to show non-coders that they can create something amazing from nothing. It empowers and enables the non-technical community with the tools, knowledge and connections that will help bring their idea to life and visually communicate it through prototyping.
-
-						Using prototyping tools, drag and drop editors, mockups, wireframes and anything else you think of to visually demo your idea on stage. Competitors will work in teams (up to 5) or solo. You have 9 hours to prototype your idea and then you present on stage.</p>
+					Competitors will work in teams (up to 5) or solo. You have 7 hours to prototype your idea and then you present on stage.</p>
 					</div>			
 				</div>
 			  
 				<h2>My Role in our Team</h2>
-				<p>Our ProtoHack team consisted of 5 individuals–3 Buisiness Development people and 1 other UX Designer besides myself. Besides 2 of the Biz Development none of us had met each other before. </p>
+				<p>Our ProtoHack team consisted of 5 individuals–3 Buisiness Development experts and 1 other UX Design besides myself. I was by far the most junior person in the team–Most of the others had been in their respective industries for 5+ years. I wanted to pull my own weight in the team and prove myself.</p>
 
 				<!-- <span class="image left"><img src="images/GivJoy/GivJoy4.jpg" alt="" /></span> -->
 				<h2>Our Initial Steps</h2>
-				<p>ProtoHack has Begun! Our initial step in the process was algning on the problem and identifying our problem. I proposed we try an activity to align our team on the problem we were trying to solve </p>
-					<blockquote><span class="big">Our Users have trouble finding a unique way to spread joy to friends & family. Its time consuming to find unique gifts for them.</span></blockquote>
-						<div class="box alt">
-										<div class="row uniform 50%">
-					<div class="12u"><span class="image fit"><img src="images/GivJoy/user-groups.png" alt="" /></span></div>
+				<p>ProtoHack has Begun! In the beginning each member of the team had various assumptions about what we were going to build. Our initial steps in the process were establishing ground rules, aligning the team, creating a schedule for the day and identifying our problem. I proposed we try an activity similar to an affinity diagraming exercise to flesh out our assumptions. It was this exercise that helped us hone in our intial problem statement:</p>
+				<blockquote><span class="big">Our Users have trouble finding a unique way to spread joy to friends & family. Its time consuming to find unique gifts for them.</span></blockquote>
+				<p>The activity led us to the idea of a mobile marketplace and we hypothesized 3 different user archetypes for the platform. We decided to identify 2 groups, Joy-senders and joy-receivers we decided that the platform would be based around  </p>
+				<p>The affinity mapping exercise also revealed that we would need to do more research to hone in our solution. Together we decided that we wanted to build a mobile marketplace for jog-giving but beyond that step we were still very unsure. We needed to figure out "What incites joy in people?", "Should gift-giving be part of our solution?" and "What motivation do people have in giving joy?"</p>
+
+				<div class="row">
+					<div class=" 6u 12u$(medium)"><span class="image fit"><img src="images/GivJoy/affinity-diagram.JPG" alt="" /></span></div>
+					<div class=" 6u$ 12u$(medium)"><span class="image fit"><img src="images/GivJoy/user-groups.png" alt="" /></span></div>
+				</div>
+				
 			<!-- 		<div class="4u"><span class="image fit"><img src="images/GivJoy/sender.png" alt="" /></span></div>
 					<div class="4u"><span class="image fit"><img src="images/GivJoy/sender.png" alt="" /></span></div>
 					<div class="4u"><span class="image fit"><img src="images/GivJoy/sender.png" alt="" /></span></div> -->
-					</div>
-					</div>
+					<!-- </div> -->
 					<h2>Research</h2>
+					<p>We took to the street to get some answers to our questions.</p>
 				<ol>
 					<li>Tell us about the last time you gave a gift to someone that wasn't a special occasion. What was their reaction?</li>
 					<li>How did you know what to get that person? Where did you get it from?</li>
-					<li>What was the most memorable gifts you have ever recieved not for an occasion? Why was it so special?</li>
+					<li>What was the most memorable gift you have ever recieved not for an occasion? Why was it so special?</li>
 				</ol>
 					<h4>Next Steps</h4>
 					<p>
+						Got our low fidelity prototype working. 
+
 						As a junior designer I feel as though I did a good job of sythesizing the high level ideas of our talented buisiness people and forcing them to focus down to a specific user flow and design.
 					</p>
-					<h4>Random Thoughts</h4>
+					<h4>Random Thoughts Etc.</h4>
 					<p>
 						Amaking sure deliverables are met.proud
 					Dicovery & Reasearch -> Persona
@@ -123,8 +129,7 @@
 									<p>Our low fidelity prototype in Invision</p>
 								</header>
 								<ul class="actions vertical">
-									<li><a href="#" class="button fit special">Activate</a></li>
-									<li><a href="#" class="button fit">Learn More</a></li>
+									<li><a href="#" class="button fit">Go!</a></li>
 								</ul>
 							</div>
 						</section>
