--- a/givjoy.html
+++ b/givjoy.html
@@ -47,14 +47,13 @@
 -->					</header>
 <section class="wrapper style5">
 	<div class="inner">
-		<blockquote><span class="big">When was the last time you made someone's day?</span></blockquote> 
-		<blockquote><span class="big">Wouldn't it be great if there was a platform to <strong>give joy</strong> to your loved ones?</span></blockquote> 
+		<blockquote><span class="big">When was the last time you made someone's day?</span></blockquote> <br/>
 		<div class="row">
 			<div class="7u 12u$(medium)"><h4>GivJoy</h4>
 				<p>Givjoy is a mobile application for allowing a person to bring joy to one of their friends. GivJoy does this by creating a marketplace for where-in a joy-sender can employ a person with a joy-giving creative talents to bring joy to their friend. GivJoy was created at ProtoHack, a code-free hackathon, in 7 hours.</p>
 			</div>
 			<div class="5u$ 12u$(medium)">
-				<blockquote>FYI Sarah Park, a marketing specialist posed the above prompt in her initial pitch for the idea of GivJoy at the beginning of ProtoHack. This question really resonated with me and I decided to join their team and help them solve their problem.</blockquote>
+				<blockquote>Sarah, a marketing specialist posed the above prompt in her initial pitch for the idea of GivJoy at the beginning of ProtoHack. This question really resonated with me and I decided to join their team and help them solve their problem.</blockquote>
 			</div>
 			</div>
 			<div class="row">
@@ -76,14 +75,15 @@
 
 				<!-- <span class="image left"><img src="images/GivJoy/GivJoy4.jpg" alt="" /></span> -->
 				<h2>Our Initial Steps</h2>
-				<p>ProtoHack has Begun! In the beginning each member of the team had various assumptions about what we were going to build. Our initial steps in the process were establishing ground rules, aligning the team, creating a schedule for the day and identifying our problem. I proposed we try an activity similar to an affinity diagraming exercise to flesh out our assumptions. It was this exercise that helped us hone in our intial problem statement:</p>
+				<p>ProtoHack has begun! In the beginning each member of the team had various assumptions about what we were going to build. Our initial steps in the process were establishing ground rules, aligning the team, creating a schedule for the day and identifying our problem. I proposed we try an activity similar to an affinity diagraming exercise to flesh out our assumptions. It was this exercise that helped us hone in our intial problem statement:</p>
 				<blockquote><span class="big">Our Users have trouble finding a unique way to spread joy to friends & family. Its time consuming to find unique gifts for them.</span></blockquote>
-				<p>The activity led us to the idea of a mobile marketplace and we hypothesized 3 different user archetypes for the platform. We decided to identify 2 groups, Joy-senders and joy-receivers we decided that the platform would be based around  </p>
-				<p>The affinity mapping exercise also revealed that we would need to do more research to hone in our solution. Together we decided that we wanted to build a mobile marketplace for jog-giving but beyond that step we were still very unsure. We needed to figure out "What incites joy in people?", "Should gift-giving be part of our solution?" and "What motivation do people have in giving joy?"</p>
+				<p>The activity led us to the idea of a mobile marketplace and we hypothesized 3 different user archetypes for the platform. We decided to identify 2 groups, Joy-senders and joy-receivers on the endpoints of the application. The third archetype we hypothesized were the <strong>creatives</strong> who were the basis for the marketplace. The creatives are people who have some sort of creative talent to bring joy to other people. We decided that the platform would work based around these 3 groups.  </p>
+				<blockquote><span class="big">Wouldn't it be great if there was a platform to <strong>give joy</strong> to your loved ones?</span></blockquote> 
+				<p>The affinity mapping exercise also revealed that we would need to do more research to <strong>validate our hypotheses</strong>. Together we needed to validate with real people whether the joy bringing platform would be a viable idea. We needed to figure out "What incites joy in people?", "Should gift-giving be part of our solution?" and "What motivation do people have in giving joy?"</p>
 
 				<div class="row">
-					<div class=" 6u 12u$(medium)"><span class="image fit"><img src="images/GivJoy/affinity-diagram.JPG" alt="" /></span></div>
-					<div class=" 6u$ 12u$(medium)"><span class="image fit"><img src="images/GivJoy/user-groups.png" alt="" /></span></div>
+					<div class=" 6u 12u$(medium)"><span class="image fit"><img src="images/GivJoy/user-groups.png" alt="" /></span></div>
+					<div class=" 6u$ 12u$(medium)"><blockquote>We decided that the scope of the hackthon would be designing a user flow for the <strong>joy-sender</strong>. Much of the research we needed to do had to identify what was important to our user flow on the side of the joy-sender. </blockquote></div>
 				</div>
 				
 			<!-- 		<div class="4u"><span class="image fit"><img src="images/GivJoy/sender.png" alt="" /></span></div>
@@ -91,12 +91,16 @@
 					<div class="4u"><span class="image fit"><img src="images/GivJoy/sender.png" alt="" /></span></div> -->
 					<!-- </div> -->
 					<h2>Research</h2>
-					<p>We took to the street to get some answers to our questions.</p>
+					<p>Myself and the other UX Designer took to the streets to get some quick validation of our concept. The questions we decided to ask focused on motivations and needs of the <strong>joy-sender</strong>.</p>
 				<ol>
 					<li>Tell us about the last time you gave a gift to someone that wasn't a special occasion. What was their reaction?</li>
 					<li>How did you know what to get that person? Where did you get it from?</li>
 					<li>What was the most memorable gift you have ever recieved not for an occasion? Why was it so special?</li>
 				</ol>
+				<div class="row">
+					<div class=" 6u 12u$(medium)"><span class="image fit"><img src="images/GivJoy/sender-flow.jpg" alt="" /></span></div>
+					<div class=" 6u$ 12u$(medium)"><blockquote>We decided that the scope of the hackthon would be designing a user flow for the <strong>joy-sender</strong>. Much of the research we needed to do had to identify what was important to our user flow on the side of the joy-sender. </blockquote></div>
+				</div>
 					<h4>Next Steps</h4>
 					<p>
 						Got our low fidelity prototype working. Created one high fidelity screen the day afterwards. Will create more and create a higher fidelity prototype.
