--- a/givjoy.html
+++ b/givjoy.html
@@ -97,15 +97,28 @@
 					<li>How did you know what to get that person? Where did you get it from?</li>
 					<li>What was the most memorable gift you have ever recieved not for an occasion? Why was it so special?</li>
 				</ol>
+				<p>We managed to interview 7 people in the time we scheduled for research. After directly returning to our team we were able to sythesize a few key insights from our interviews:</p>
+				<ol>
+					<li>We found that in almost all cases when we asked the participant to recall their most memorable gift that the gift was <strong>not a purely physical gift</strong>. Most of the time the most salient part of the memory was the person or emotion that came along with the gift.</li>
+					<li>In almost all cases the most memorable gift invloved some <strong>element of surprise</strong>.</li>
+					<li>When asked about their motivation behind sending a gift to a loved one–much of the time the gift was given to <strong>console</strong> them.</li>
+
+				</ol>
+
+				<h2>User Flow & Sketches</h2>
 				<div class="row">
 					<div class=" 6u 12u$(medium)"><span class="image fit"><img src="images/GivJoy/sender-flow.jpg" alt="" /></span></div>
-					<div class=" 6u$ 12u$(medium)"><blockquote>We decided that the scope of the hackthon would be designing a user flow for the <strong>joy-sender</strong>. Much of the research we needed to do had to identify what was important to our user flow on the side of the joy-sender. </blockquote></div>
+					<div class=" 6u$ 12u$(medium)"><blockquote>As we designed a user flow for the joy-sender we tried to take into account the insights we gained from our research.</blockquote></div>
 				</div>
+				<span class="image fit"><img src="images/GivJoy/sketches.jpg" alt="" /></span>
+
 					<h4>Next Steps</h4>
 					<p>
-						Got our low fidelity prototype working. Created one high fidelity screen the day afterwards. Will create more and create a higher fidelity prototype.
+						Got our low fidelity prototype working. I think the next steps in our process would be to 
 
 						As a junior designer I feel as though I did a good job of sythesizing the high level ideas of our talented buisiness people and forcing them to focus down to a specific user flow and design.
+
+						Research is <strong>ALWAYS</strong> possible within <strong>ANY</strong> organization and within <strong>ANY</strong> time frame. We did research in a 7 hour project with no budget. 
 					</p>
 					<h4>Random Thoughts Etc.</h4>
 					<p>
