--- a/givjoy.html
+++ b/givjoy.html
@@ -111,7 +111,9 @@
 					<div class=" 6u$ 12u$(medium)"><blockquote>As we designed a user flow for the joy-sender we tried to take into account the insights we gained from our research.</blockquote></div>
 				</div>
 				<span class="image fit"><img src="images/GivJoy/sketches.jpg" alt="" /></span>
-
+				<p>
+						It was at this point that we decided to stop create and 
+					</p>
 					<h4>Next Steps</h4>
 					<p>
 						Got our low fidelity prototype working. I think the next steps in our process would be to 
